Assignment2_Zhao_Duo/tests/automated/tests/bad/IdKeywordWithBadCharacters-24.calc
b2% cd% ef%23 gh%24i re%ad jk%l wr%ite mn%o65p re%ad te%st
